[gd_scene load_steps=3 format=3 uid="uid://rhyptelcw8cx"]

[ext_resource type="Script" uid="uid://c38od3vjndcjr" path="res://player_spawner.gd" id="1_6jqeu"]

[sub_resource type="BoxMesh" id="BoxMesh_6jqeu"]

[node name="PlayerSpawner" type="Node3D"]
script = ExtResource("1_6jqeu")

[node name="Point1" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Point1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_6jqeu")

[node name="Point2" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Point2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_6jqeu")

[node name="Point3" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Point3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_6jqeu")

[node name="Point4" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Point4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_6jqeu")
